Updated video url Added edit option

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -14,4 +14,4 @@ metaTitle: " webMethods.io | FlowServices"
 - **FlowServices** currently  supports a wide range of connectors and comes with several built-in services that makes your job easier.
 - Check the [Getting Started](/getting-started) section, to get acquainted with the concepts in FlowServices.
 
-<YoutubeEmbed link="https://www.youtube.com/embed/Bq84SD3qMoE" />
+<YoutubeEmbed link="https://www.youtube.com/embed/VnrdiYfplVM" />
