Added Branch Construcr

--- a/content/conditional-constructs.mdx
+++ b/content/conditional-constructs.mdx
@@ -10,4 +10,5 @@ Conditional steps are those steps which performs different actions based on the 
 * Else
 * ElseIf
 * Switch
+* Branch
 <Feature name="Conditional Constructs"/>
