--- a/content/schedule.mdx
+++ b/content/schedule.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Schedule"
+title: "Schedule Flowservices"
 
 ---
 User can schedule the flowServices using schedule Menu in the Action Bar.
